# geographie-lernapp

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: auth.py  europas_rekorde.py  main.py  openai_tools.py  settings.py  utils.py
app/pages/: 🌍_Europas_Rekorde.py
data/Europas_Rekorde/: punkte_europa.csv
